--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
+    "react-hook-form-persist": "^3.0.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
